<resources>
    <string name="app_name">Dangder</string>
    <string name="hint_email">이메일을 입력해주세요.</string>
    <string name="hint_password">비밀번호를 입력해주세요.</string>
    <string name="singup"><u>회원가입하기</u></string>
    <string name="have_no_account">아직 계정이 없으신가요?</string>
    <string name="forget_password">비밀번호를 잊으셨나요?</string>
    <string name="reset_password"><u>비밀번호 재설정</u></string>
    <string name="nonmember_enter"><u>비회원으로 둘러보기 🐾</u></string>
    <string name="not_match_verify_code">인증번호를 모두 입력해주세요.</string>
    <string name="verified">인증되었습니다.</string>
    <string name="label_check_password">비밀번호 확인</string>
    <string name="hint_repassword">비밀번호를 다시 입력해 주세요.</string>
    <string name="hint_dog_reg_number">댕댕이의 등록번호를 입력해 주세요.</string>
    <string name="dog_emoji">🐶댕댕이</string>
    <string name="label_setting_profile">프로필 설정</string>
    <string name="label_image">이미지</string>
    <string name="caution_image1">🐾 가장 먼저 등록한 이미지가 대표 이미지로 설정됩니다.</string>
    <string name="caution_image2">🐾 이미지를 길게 누르면 삭제 및 순서 편집이 가능합니다.</string>
</resources>