<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="30dp"
        tools:context=".presenter.login.IntroActivity">

        <ImageView
            android:id="@+id/login_logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/hint_email"
            android:textSize="@dimen/micro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo_image"
            app:startIconDrawable="@drawable/ic_round_email_24"
            app:startIconTint="@color/main"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/micro" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_password"
            android:textSize="@dimen/micro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_input_layout"
            app:startIconDrawable="@drawable/ic_round_lock_24"
            app:startIconTint="@color/main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:textSize="@dimen/micro" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_round_button"
            android:fontFamily="@font/sc_dream3"
            android:paddingVertical="10dp"
            android:text="로그인"
            android:textColor="@color/white"
            android:textSize="@dimen/small"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/login_password_input_layout" />


        <LinearLayout
            android:id="@+id/login_have_no_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_login_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/micro"
                android:text="@string/have_no_account"
                android:textSize="@dimen/micro" />

            <TextView
                android:id="@+id/login_signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singup"
                android:textColor="@color/black"
                android:textSize="@dimen/small" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/login_forget_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_have_no_account_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/micro"
                android:text="@string/forget_password"
                android:textSize="@dimen/micro" />

            <TextView
                android:id="@+id/reset_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textColor="@color/black"
                android:textSize="@dimen/small" />
        </LinearLayout>

        <TextView
            android:id="@+id/nonmember_enter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nonmember_enter"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_forget_password_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
