<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="26dp">


        <LinearLayout
            android:id="@+id/label_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/signup_next_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="비밀번호를"
                android:textColor="@color/black"
                android:textSize="@dimen/supper"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="입력해 주세요."
                android:textColor="@color/black"
                android:textSize="@dimen/supper" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/hint_password"
            android:textSize="@dimen/micro"
            app:layout_constraintTop_toBottomOf="@+id/label_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:textSize="@dimen/micro" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/check_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"

            android:text="@string/label_check_password"
            android:textSize="@dimen/small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_password_input_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_check_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_repassword"
            android:textSize="@dimen/micro"
            app:layout_constraintTop_toBottomOf="@+id/check_password_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_check_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:textSize="@dimen/micro" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/signup_signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_button"
            android:text="가입"
            android:textSize="@dimen/middle"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
